Design/Inertial Sensing Unit/STM Workspace/.metadata/.plugins/org.eclipse.cdt.ui/Ignition driving circuit.build.log
16:59:54 **** Building Selected Files of configuration Debug for project Ignition driving circuit ****
Info: Internal Builder is used for build
arm-none-eabi-gcc "..\\Core\\Src\\main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core\\Src\\main.o" 
..\Core\Src\main.c:66:6: error: 'Parasuit_1' redeclared as different kind of symbol
   66 | void Parasuit_1(){
      |      ^~~~~~~~~~
..\Core\Src\main.c:56:19: note: previous definition of 'Parasuit_1' was here
   56 | bool ignition = 0,Parasuit_1 = 0, Parasuit_2 = 0 ;
      |                   ^~~~~~~~~~
..\Core\Src\main.c: In function 'Parasuit_1':
..\Core\Src\main.c:67:33: warning: comparison between pointer and integer
   67 |  if(ignition == 0 && Parasuit_1 == 1 && Parasuit_2 == 0) {
      |                                 ^~
..\Core\Src\main.c:69:14: error: lvalue required as left operand of assignment
   69 |   Parasuit_1 = 0 ;
      |              ^
..\Core\Src\main.c: At top level:
..\Core\Src\main.c:72:7: error: 'Parasuit_2' redeclared as different kind of symbol
   72 |  void Parasuit_2(){
      |       ^~~~~~~~~~
..\Core\Src\main.c:56:35: note: previous definition of 'Parasuit_2' was here
   56 | bool ignition = 0,Parasuit_1 = 0, Parasuit_2 = 0 ;
      |                                   ^~~~~~~~~~
..\Core\Src\main.c: In function 'Parasuit_2':
..\Core\Src\main.c:73:34: warning: comparison between pointer and integer
   73 |   if(ignition == 0 && Parasuit_1 == 1 && Parasuit_2 == 1) {
      |                                  ^~
..\Core\Src\main.c:73:53: warning: comparison between pointer and integer
   73 |   if(ignition == 0 && Parasuit_1 == 1 && Parasuit_2 == 1) {
      |                                                     ^~

16:59:54 Build Failed. 3 errors, 3 warnings. (took 137ms)

